google login web ok

--- a/shopmart_flutter/web/index.html
+++ b/shopmart_flutter/web/index.html
@@ -20,6 +20,9 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- Google Sign-In web client id (used by google_sign_in web plugin) -->
+  <meta name="google-signin-client_id" content="292181512117-u9jhd37brgcve0n6dkb7usjf4tf4istu.apps.googleusercontent.com">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
